
FilePicker v1.0.2
  - Now allow specifying a 'useprefix' boolean parameter to the action url which will use the current top directory
    as a prefix on all returned strings.
  - Slight modification to the profile class.

FileManager v1.6.5
  - Change upload action to call FileManager::OnFileUploaded hook before creating the thumbnail to allow a hook to rename the uploaded file.

MicroTiny v2.2.2
  - Minor fix for the filepicker if using a default filepicker profile that specifies a top directory.
  - Re-adds the table plugin (went missing when we upgraded tinymce).

Version 2.2.3.1 - Happy Adventure
----------------------------------
Core - General
  - Fix an issue when parsing multiple content blocks.

Version 2.2.3 - Happy Adventure
----------------------------------
Core - General
  - Fixed a redirect loop problem on mixed HTTP/HTTPS sites when the secure flag was set on some pages.
  - Fixed a problem with prefilters and postfilters not working if placed in /assets/plugins.
  - Now use our own derivative of Smarty Internal Template so that we can send hooks, etc.
  - Improved error message if there was an error parsing the template (or a duplicate content block).
  - Fixes content blocks, image blocks, module blocks containing whitespace in the name.
  - Minor fix to {cms_filepicker} plugin.
  - Improve the CmsModuleInfo class such that if the module class file is newer it will be loaded.
  - Now generate the moduleinfo.ini file automatically on install or upgrade of a module.
  - Increase the maxlength attribute for password input boxes in myaccount.
  - Adds a StartsWith JavaScript shiv for IE11.
  - Revert the protocol-less URI for root_url (more changes coming for 2.3).
  - Get rid of the smart_url config option.
  - Fix a problem when testing for duplicate aliases of the form string-###  where the suffix integer was greater than 100.
  - More fixes to mact preprocessing if {content} was in the top of the template.