@@ -6,6 +6,7 @@ $this->SetPreference('advancedmode',0);
 $this->SetPreference("iconsize","32px");
 $this->SetPreference("showhiddenfiles",0);
 $this->SetPreference('showthumbnails',1);
+$this->SetPreference('create_thumbnails',1);
 $this->SetPreference('permissionstyle','xxx');
 
 $this->CreateEvent('OnFileUploaded');
